--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="col-lg-8 mx-auto">
             <p class="text-faded mb-5">Sencillamente práctico para su administración, y lo que es mejor por menos de lo que cuesta un arriendo en Bogotá!</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#portfolio">Nuestros Portafolio</a>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://haprey.github.io/clientes" target="blank">Algunos Clientes</a>
+            <a class="btn btn-info btn-xl js-scroll-trigger" href="https://haprey.github.io/clientes" target="blank">Algunos Clientes</a>
           </div>
         </div>
       </div>
