Mejoras en texto
hecho

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">Acerca</a>
+              <a class="nav-link js-scroll-trigger" href="#about">Producto</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Servicios</a>
@@ -79,7 +79,7 @@
             <h2 class="section-heading text-white">Que Podemos Hacer por Ti?</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">Implementamos tu sitio web en nichos corporativos, personales,
-			tiendas virtuales woocomerce y prestashop, embudos de marketing, algunos basados en cms wordpress, con diseños responsivos y autoadministrables!</p>
+			tiendas virtuales woocomerce, prestashop y embudos de marketing, algunos construidos en cms wordpress, con diseños responsivos y autoadministrables!</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="https://payco.link/109359" target="new">Contratar una Web!</a>
           </div>
         </div>
