--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
+	    <img src="img/Humprey_Alexis.png" height="100px" class="rounded" alt="Humprey Alexis">
             <h2 class="section-heading">¡Mantengámonos en contacto!</h2>
             <hr class="my-4">
             <p class="mb-5">¿Listo para comenzar tu próximo proyecto con nosotros? ¡Eso es genial! Llámenos o envíenos un correo electrónico y nos pondremos en contacto con usted lo antes posible.</p>
