--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
 
     <section class="bg-dark text-white">
       <div class="container text-center">
+	<i class="fas fa-money-bill-alt fa-3x mb-3 sr-contact-2"></i>
         <h2 class="mb-4">Otras propuestas!</h2>
         <a class="btn btn-light btn-xl sr-button" href="https://haprey.github.io/skyway/" target="new">Ganar Dinero Conmigo!</a>
       </div>
@@ -238,7 +239,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
 	    <img src="img/Humprey_Alexis.png" height="100px" class="rounded" alt="Humprey Alexis">
-            <h2 class="section-heading">¡Mantengámonos en contacto!</h2>
+            <h2 class="section-heading">¡Humprey Alexis!</h2>
             <hr class="my-4">
             <p class="mb-5">¿Listo para comenzar tu próximo proyecto con nosotros? ¡Eso es genial! Llámenos o envíenos un correo electrónico y nos pondremos en contacto con usted lo antes posible.</p>
           </div>
