--- a/index.html
+++ b/index.html
@@ -229,8 +229,9 @@
     <section class="bg-dark text-white">
       <div class="container text-center">
 	<i class="fas fa-money-bill-alt fa-3x mb-3 sr-contact-2"></i>
-        <h2 class="mb-4">Otras propuestas!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="https://haprey.github.io/skyway/" target="new">Ganar Dinero Conmigo!</a>
+        <h2 class="mb-4">Propuesta de Ingresos Adicional!</h2>
+	<h4 class="mb-4">Lo que me está funcionando y he estudiado por 4 años para usted</h4>
+        <a class="btn btn-light btn-xl sr-button" href="https://haprey.github.io/skyway/" target="new">Ganar Dinero a Mi Lado!</a>
       </div>
     </section>
 
@@ -262,6 +263,12 @@
         </div>
       </div>
     </section>
+	  
+<footer class="mastfoot mt-auto">
+    <div class="inner">
+      <p>©2019 <a href="#">Todos los derechos reservados</a>, Creado por <a href="https://haprey.github.io/humprey/">Humprey Alexis</a>.</p>
+    </div>
+  </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
