--- a/index.html
+++ b/index.html
@@ -248,12 +248,12 @@
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fab fa-whatsapp-square fa-3x mb-3 sr-contact-1"></i>
-            <p>+57-313-2106858</p>
+		  <p><a href="https://api.whatsapp.com/send?phone=573132106858&text=Buen%2C%20dia.%20Me%20interesa%20una%20web%20con%20%20su%20%20empresa%20">+57-313-2106858</a></p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
             <p>
-              <a href="mailto:your-email@your-domain.com">humprey27@gmail.com</a>
+              <a href="mailto:humprey27@gmail.com">humprey27@gmail.com</a>
             </p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
@@ -269,7 +269,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2019 Copyright:
-      <a href="https://haprey.github.io/humprey/"> HumpreyAlexis</a>
+      <a href="https://haprey.github.io/humprey/">Web Master HumpreyAlexis</a>
     </div>
     <!-- Copyright -->
 </footer>
