--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 	<i class="fas fa-money-bill-alt fa-3x mb-3 sr-contact-2"></i>
         <h2 class="mb-4">Propuesta de Ingresos Adicional!</h2>
 	<h4 class="mb-4">Lo que me está funcionando y he estudiado por 4 años para usted</h4>
-        <a class="btn btn-light btn-xl sr-button" href="https://haprey.github.io/skyway/" target="new">Ganar Dinero a Mi Lado!</a>
+        <a class="btn btn-light btn-xl sr-button" href="https://haprey.github.io/grupo-transnet/" target="new">Ganar Dinero a Mi Lado!</a>
       </div>
     </section>
 
@@ -240,7 +240,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
 	    <img src="img/Humprey_Alexis.png" height="100px" class="rounded" alt="Humprey Alexis">
-            <h2 class="section-heading">¡Humprey Alexis!</h2>
+            <h2 class="section-heading">¡Humprey Alexis! Web Master</h2>
             <hr class="my-4">
             <p class="mb-5">¿Listo para comenzar tu próximo proyecto con nosotros? ¡Eso es genial! Llámenos o envíenos un correo electrónico y nos pondremos en contacto con usted lo antes posible.</p>
           </div>
@@ -268,8 +268,8 @@
 <footer class="bg-dark text-white">
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2019 Copyright:
-      <a href="https://haprey.github.io/humprey/">Web Master HumpreyAlexis</a>
+    <div class="footer-copyright text-center py-3">© 2020 Copyright: Web Master
+      <a href="https://haprey.github.io/humprey/"> HumpreyAlexis</a>
     </div>
     <!-- Copyright -->
 </footer>
