Actualizacion del codigo
Mejora de enlaces y textos

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Humprey Alexis</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Haprey Designs</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -80,7 +80,7 @@
             <hr class="light my-4">
             <p class="text-faded mb-4">Implementamos tu sitio web en nichos corporativos, personales,
 			tiendas virtuales woocomerce, prestashop y embudos de marketing, algunos construidos en cms wordpress, con diseños responsivos y autoadministrables!</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="https://payco.link/109359" target="new">Contratar una Web!</a>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="https://secure.payco.co/checkoutopen/41914" target="new">Contratar una Web!</a>
           </div>
         </div>
       </div>
@@ -242,7 +242,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
 	    <img src="img/Humprey_Alexis.png" height="100px" class="rounded" alt="Humprey Alexis">
-            <h2 class="section-heading">¡Humprey Alexis! Web Master</h2>
+            <h2 class="section-heading">¡Humprey Alexis! Web Master de Haprey Designs</h2>
             <hr class="my-4">
             <p class="mb-5">¿Listo para comenzar tu próximo proyecto con nosotros? ¡Eso es genial! Llámenos o envíenos un correo electrónico y nos pondremos en contacto con usted lo antes posible.</p>
           </div>
@@ -255,7 +255,7 @@
           <div class="col-lg-4 mr-auto text-center">
             <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
             <p>
-              <a href="mailto:humprey27@gmail.com">humprey27@gmail.com</a>
+              <a href="mailto:info@humpreyalexis.com">info@humpreyalexis.com</a>
             </p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
@@ -270,7 +270,7 @@
 <footer class="bg-dark text-white">
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright: Web Master
+    <div class="footer-copyright text-center py-3">© 2021 Copyright: Web Master
       <a href="https://haprey.github.io/humprey/"> HumpreyAlexis</a>
     </div>
     <!-- Copyright -->
