--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 	<i class="fas fa-money-bill-alt fa-3x mb-3 sr-contact-2"></i>
         <h2 class="mb-4">Propuesta de Ingresos Adicional!</h2>
 	<h4 class="mb-4">Testeado desde hace 4 años para usted</h4>
-	   <div style="position: relative;padding-bottom: 56.25%;height: 0;overflow: hidden;"> <iframe src="https://www.youtube.com/embed/nY4i9trBeAU?rel=0&amp;showinfo=0&amp;autoplay=1" width="1024" height="576" frameborder="0" allow="autoplay; encrypted-media" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%; padding:0px; margin: 0px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
+	   <div style="position: relative;padding-bottom: 56.25%;height: 0;overflow: hidden;"> <iframe src="https://www.youtube.com/embed/LccVzjeQUEE?rel=0&amp;showinfo=0&amp;autoplay=1" width="1024" height="576" frameborder="0" allow="autoplay; encrypted-media" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%; padding:0px; margin: 0px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
 	 </div><br>
         <a class="btn btn-light btn-xl sr-button" href="https://haprey.github.io/grupo-transnet/" target="new">Ganar Dinero a Mi Lado!</a>
       </div>
@@ -242,7 +242,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
 	    <img src="img/Humprey_Alexis.png" height="100px" class="rounded" alt="Humprey Alexis">
-            <h2 class="section-heading">¡Humprey Alexis! Web Master de Haprey Designs</h2>
+            <h2 class="section-heading">¡Humprey Alexis! <br> Web Master de Haprey Designs</h2>
             <hr class="my-4">
             <p class="mb-5">¿Listo para comenzar tu próximo proyecto con nosotros? ¡Eso es genial! Llámenos o envíenos un correo electrónico y nos pondremos en contacto con usted lo antes posible.</p>
           </div>
@@ -271,7 +271,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2021 Copyright: Web Master
-      <a href="https://haprey.github.io/humprey/"> HumpreyAlexis</a>
+      <a href="https://www.humpreyalexis.com/"> HumpreyAlexis</a>
     </div>
     <!-- Copyright -->
 </footer>
