--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
     <section class="bg-dark text-white">
       <div class="container text-center">
 	<i class="fas fa-money-bill-alt fa-3x mb-3 sr-contact-2"></i>
-        <h2 class="mb-4">Propuesta de Ingresos Adicional!</h2>
-	<h4 class="mb-4">Testeado desde hace 4 años para usted</h4>
-	   <div style="position: relative;padding-bottom: 56.25%;height: 0;overflow: hidden;"> <iframe src="https://www.youtube.com/embed/LccVzjeQUEE?rel=0&amp;showinfo=0&amp;autoplay=1" width="1024" height="576" frameborder="0" allow="autoplay; encrypted-media" style="position: absolute;top: 0;left: 0;width: 100%;height: 100%; padding:0px; margin: 0px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
+        <h2 class="mb-4">¡Creamos tu Presencia en Internet!</h2>
+	<h4 class="mb-4">Tan rapido como la quieras</h4>
+	   <div style="position: relative;padding-bottom: 56.25%;height: 0;overflow: hidden;">
 	 </div><br>
-        <a class="btn btn-light btn-xl sr-button" href="https://haprey.github.io/grupo-transnet/" target="new">Ganar Dinero a Mi Lado!</a>
+        <a class="btn btn-light btn-xl sr-button" href="https://haprey.github.io/grupo-transnet/" target="new">Cotiza la tuya Ahora!</a>
       </div>
     </section>
 
