--- a/index.html
+++ b/index.html
@@ -231,9 +231,8 @@
 	<i class="fas fa-money-bill-alt fa-3x mb-3 sr-contact-2"></i>
         <h2 class="mb-4">¡Creamos tu Presencia en Internet!</h2>
 	<h4 class="mb-4">Tan rapido como la quieras</h4>
-	   <div style="position: relative;padding-bottom: 56.25%;height: 0;overflow: hidden;">
-	 </div><br>
-        <a class="btn btn-light btn-xl sr-button" href="https://haprey.github.io/grupo-transnet/" target="new">Cotiza la tuya Ahora!</a>
+	   <br>
+        <a class="btn btn-light btn-xl sr-button" href="https://haprey.github.io/grupo-transnet/" target="new">Cotiza la Tuya Ahora!</a>
       </div>
     </section>
 
