--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <h2 class="mb-4">¡Creamos tu Presencia en Internet!</h2>
 	<h4 class="mb-4">Tan rapido como la quieras</h4>
 	   <br>
-        <a class="btn btn-light btn-xl sr-button" href="https://haprey.github.io/grupo-transnet/" target="new">Cotiza la Tuya Ahora!</a>
+        <a class="btn btn-light btn-xl sr-button" href="https://api.whatsapp.com/send?phone=573132106858&text=Buen%2C%20dia.%20Me%20interesa%20crear%20una%20de%20pagina%20web%20para%20este%20año." target="new">Cotiza la Tuya Ahora!</a>
       </div>
     </section>
 
