--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
           <div class="col-lg-8 mx-auto text-center">
 	    <img src="img/Humprey_Alexis.png" height="100px" class="rounded" alt="Humprey Alexis">
             <h2 class="section-heading">¡Humprey Alexis! <br> Web Master de Haprey Designs</h2>
+		  <h2 class="section-heading">www.HumpreyAlexis.com</h2
             <hr class="my-4">
             <p class="mb-5">¿Listo para comenzar tu próximo proyecto con nosotros? ¡Eso es genial! Llámenos o envíenos un correo electrónico y nos pondremos en contacto con usted lo antes posible.</p>
           </div>
