--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Sencillamente práctico para su administración, y lo que es mejor por menos de lo que cuesta un arriendo en Bogotá!</p>
+            <p class="text-faded mb-5">Te lo creamos para Acacias Meta, economico, responsivo y para cualquier tipo de negocio!</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#portfolio">Nuestros Portafolio</a>
             <a class="btn btn-info btn-xl js-scroll-trigger" href="https://haprey.github.io/clientes" target="blank">Algunos Clientes</a>
           </div>
@@ -230,7 +230,7 @@
       <div class="container text-center">
 	<i class="fas fa-money-bill-alt fa-3x mb-3 sr-contact-2"></i>
         <h2 class="mb-4">¡Creamos tu Presencia en Internet!</h2>
-	<h4 class="mb-4">Tan rapido como la quieras</h4>
+	<h4 class="mb-4">Tan rapido como la quieras puedes tener su tienda virtual en Acacias Meta y la región.</h4>
 	   <br>
         <a class="btn btn-light btn-xl sr-button" href="https://api.whatsapp.com/send?phone=573132106858&text=Buen%2C%20dia.%20Me%20interesa%20crear%20una%20de%20pagina%20web%20para%20este%20año." target="new">Cotiza la Tuya Ahora!</a>
       </div>
@@ -242,7 +242,7 @@
           <div class="col-lg-8 mx-auto text-center">
 	    <img src="img/Humprey_Alexis.png" height="100px" class="rounded" alt="Humprey Alexis">
             <h2 class="section-heading">¡Humprey Alexis! <br> Web Master de Haprey Designs</h2>
-		  <h4 class="section-heading">www.HumpreyAlexis.com</h4>
+		  <h5 class="section-heading">www.HumpreyAlexis.com</h5>
             <hr class="my-4">
             <p class="mb-5">¿Listo para comenzar tu próximo proyecto con nosotros? ¡Eso es genial! Llámenos o envíenos un correo electrónico y nos pondremos en contacto con usted lo antes posible.</p>
           </div>
