--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fab fa-whatsapp-square fa-3x mb-3 sr-contact-1"></i>
-		  <p><a href="https://api.whatsapp.com/send?phone=573132106858&text=Buen%2C%20dia.%20Me%20interesa%20una%20web%20con%20%20su%20%20empresa%20">+57-313-2106858</a></p>
+		  <p><a href="https://api.whatsapp.com/send?phone=573132106858&text=Buen%2C%20dia.%20Me%20interesa%20una%20web%20con%20%20su%20%20empresa%20">Escribe al correo</a></p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
