--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <hr class="light my-4">
             <p class="text-faded mb-4">Implementamos tu sitio web en nichos corporativos, personales,
 			tiendas virtuales woocomerce, prestashop y embudos de marketing, algunos construidos en cms wordpress, con diseños responsivos y autoadministrables!</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="https://secure.payco.co/checkoutopen/41914" target="new">Contratar una Web!</a>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="https://haprey.github.io/portafolio/" target="new">Contratar una Web!</a>
           </div>
         </div>
       </div>
@@ -246,6 +246,7 @@
 	    <img src="img/Humprey_Alexis.png" height="100px" class="rounded" alt="Humprey Alexis">
             <h2 class="section-heading">¡Humprey Alexis! <br> Web Master de Haprey Designs</h2>
 		  <h5 class="section-heading">www.HumpreyAlexis.com</h5>
+		  <h5 class="section-heading">www.MisRentas.online</h5>
             <hr class="my-4">
             <p class="mb-5">¿Listo para comenzar tu próximo proyecto con nosotros? ¡Eso es genial! Llámenos o envíenos un correo electrónico y nos pondremos en contacto con usted lo antes posible.</p>
           </div>
