--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <h2 class="section-heading text-white">Que Podemos Hacer por Ti?</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">Implementamos tu sitio web en nichos corporativos, personales,
-			tiendas virtuales woocomerce, prestashop y embudos de marketing, algunos construidos en cms wordpress, con diseños responsivos y autoadministrables!</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="https://haprey.github.io/portafolio/" target="new">Contratar una Web!</a>
+			tiendas virtuales woocomerce y embudos de marketing, algunos construidos en cms wordpress, con diseños responsivos y autoadministrables! "Creando Presencia en Internet desde 2009</p>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="https://haprey.github.io/portafolio/" target="new">Contratar una Web por precios muy comodos!</a>
           </div>
         </div>
       </div>
@@ -137,7 +137,7 @@
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/13.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/12.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/13.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
